--- a/DeezKnuxClient/package.json
+++ b/DeezKnuxClient/package.json
@@ -34,12 +34,14 @@
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-data": "~3.5.0",
+    "ember-data-route": "^0.2.0",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.1.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-notify": "^6.0.0",
     "ember-qunit": "^3.4.1",
     "ember-resolver": "^5.0.1",
+    "ember-route-action-helper": "^2.0.7",
     "ember-simple-auth": "^1.9.2",
     "ember-source": "~3.5.1",
     "ember-welcome-page": "^3.2.0",
@@ -49,5 +51,6 @@
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
-  }
+  },
+  "dependencies": {}
 }
